# SlicerNewtonPhysics

./: .gitignore  CLAUDE.md  CMakeLists.txt  License.txt  README.md
NewtonPhysics/: CMakeLists.txt  NewtonPhysics.py
NewtonPhysics/Testing/Python/: CMakeLists.txt
